core/framework-core/src/snapshots/framework_core__hook_policy__tests__hook_policy_evaluate_bash_danger_snapshot.snap
---
source: core/framework-core/src/hook_policy.rs
assertion_line: 1480
expression: response
---
HookPolicyEvaluateResponse {
    schema_version: "router-rs-hook-policy-v1",
    authority: "rust-hook-policy",
    operation: "bash-danger",
    blocked: true,
    reason: Some(
        "Blocked destructive rm command.",
    ),
    categories: [],
    category: None,
    protected: false,
    protection_kind: None,
}
