core/framework-core/src/snapshots/framework_core__hook_policy__tests__hook_policy_evaluate_validation_categories_snapshot.snap
---
source: core/framework-core/src/hook_policy.rs
assertion_line: 1500
expression: response
---
HookPolicyEvaluateResponse {
    schema_version: "router-rs-hook-policy-v1",
    authority: "rust-hook-policy",
    operation: "validation-categories",
    blocked: false,
    reason: None,
    categories: [
        "rust",
    ],
    category: None,
    protected: false,
    protection_kind: None,
}
